--- a/config/west.yml
+++ b/config/west.yml
@@ -5,15 +5,14 @@ manifest:
     # nice_oled
     - name: mctechnology17
       url-base: https://github.com/mctechnology17
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
     # nice_oled
-    - name: mctechnology17
-      url-base: https://github.com/mctechnology17
+    - name: zmk-nice-oled
+      remote: mctechnology17
+      revision: main
   self:
-    path: config
+    path: configath: config
