--- a/build.yaml
+++ b/build.yaml
@@ -19,8 +19,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: sofle_left nice_view_adapter  nice_view_custom
+    shield: sofle_left nice_oled
   - board: nice_nano_v2
-    shield: sofle_right nice_view_adapter  nice_view_custom
+    shield: sofle_right nice_oled
   - board: nice_nano_v2
     shield: settings_reset
