--- a/config/west.yml
+++ b/config/west.yml
@@ -1,17 +1,18 @@
 manifest:
   remotes:
-    # zmk official
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: dsifry #new entry
-      url-base: https://github.com/dsifry #new entry
+    # nice_oled
+    - name: mctechnology17
+      url-base: https://github.com/mctechnology17
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: nice-view-mod #new entry
-      remote: dsifry #new entry
-      revision: main #new entry
+    # nice_oled
+    - name: zmk-nice-oled
+      remote: mctechnology17
+      revision: main
   self:
     path: config
