--- a/build.yaml
+++ b/build.yaml
@@ -23,4 +23,4 @@ include:
   - board: nice_nano_v2
     shield: sofle_right nice_view_adapter  nice_view_custom 
   - board: nice_nano_v2
-    shield: settings_reset nice_view_adapter  nice_view_custom
+    shield: settings_reset 
