--- a/config/west.yml
+++ b/config/west.yml
@@ -3,21 +3,16 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
     # nice_oled
-    # - name: mctechnology17
-    #   url-base: https://github.com/mctechnology17
-    - name: dsifry #new entry
-      url-base: https://github.com/dsifry 
+    - name: mctechnology17
+      url-base: https://github.com/mctechnology17
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
     # nice_oled
-    # - name: zmk-nice-oled
-    #   remote: mctechnology17
-    #   revision: main
-    - name: nice-view-mod
-      remote: dsifry
+    - name: zmk-nice-oled
+      remote: mctechnology17
       revision: main
   self:
     path: config
